--- a/Coral_cover_analysis.Rmd
+++ b/Coral_cover_analysis.Rmd
@@ -1,17 +1,20 @@
 ---
 title: "Coral cover analysis"
 author: "Mauricio Romero-Torres and Ana Palacio-Castro"
-date: "September 16, 2019"
+date: "January 16, 2020"
 output:
   html_document:
     toc: true
     theme: united
-    code_folding: hide
     
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+	echo = TRUE,
+	message = FALSE,
+	warning = FALSE
+)
 ```
 
 
@@ -19,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE)
  
  * Title: Coral reef resilience to thermal stress in the Eastern Tropical Pacific
  * Authors: Mauricio Romero-Torres, Alberto Acosta, Eric A. Treml, Fernando A. Zapata, David A. Paz-García, Ana M. Palacio-Castro & James W. Porter
- * Version 3.0
+ * Version 3.1
 
 
 ```{r}
@@ -27,7 +30,7 @@ rm(list = ls())  # Remove all objects from memory
 
 ```
 
-##  Influence of most intense ENSO events on the coral cover in the ETP
+#  1. Influence of most intense ENSO events on the coral cover in the ETP
 
 ```{r}
 library(ggplot2)
@@ -47,10 +50,9 @@ theme_set (theme_classic() + theme(panel.grid.major = element_blank(),
                               ))
 ```
 
-
 # ENSO intensity in region 3 
 
-## Figure 1a
+### Figure 2a
 
 ```{r}
 
@@ -93,7 +95,6 @@ ENSO
 # ENSOb
 ```
 
-
 # Coral Cover trends in the ETP
 
 ## Coral cover data
@@ -119,6 +120,8 @@ ENSO
   #cover$Year <- as.numeric((cover$Year)-1970)  # transform years to begin in 0
   summary(cover)
 ```
+
+## Data aggreation
 
 * Hierarchically aggregate by Site, Location and Region
 * Create time-intervals, and
@@ -155,14 +158,13 @@ ENSO
 ```
 
 ## Generalized Linear Mixed Model design and hypothesis testing  
+* Coral_cover= response variable
+* Region = repeated measure "subject" or repeated experimental unit (random factor)
+* Year = continuous numeric variable
+* Thermal_regime = fixed factor
   
 ```{r, message=FALSE}
-  
 library(nlme)
-# Coral_cover     = response variable
-# Region          = repeated measure "subject" or repeated experimental unit (random factor)
-# Year            = continuous numeric variable
-# Thermal_regime  = fixed factor
 ```
 
 ### Model 1: All years 1970_2014 
@@ -175,7 +177,7 @@ library(nlme)
   summary(model1)
   anova(model1)
   plot(ranef(model1))    # shows symmetrical scatter effects around zero
-  plot(model1)           # plot residuals  vs fitted
+  plot(model1)           # plot residuals vs fitted
   resnorm1 <- resid(model1)
   hist(resnorm1, xlab = "Residuals", main = "") # residuals are normally distributed?
   coef.m1 <- as.data.frame(coef(summary(model1)))    # Coefficients of the model
@@ -187,7 +189,7 @@ library(nlme)
   
 ```
 
-* Figure 1b
+#### Figure 2b
 
 ```{r, warning=FALSE}
 #Using raw data (Only thermal regime is significant in model)
@@ -226,11 +228,12 @@ Model1_plot
     plot(model2, Coral_cover ~ fitted(.) | Region, abline = c(0,1))
     plot(model2, Coral_cover ~ fitted(.) | Thermal_regime, abline = c(0,1))
     
-    # Note that this first time interval has low number of regions at each year, even the 
-    # GLMM model is adjusted, please warning with interpretation/generalization of results
 ```
 
-* Figure 1c
+
+*Note that this first time interval has low number of regions at each year, even the GLMM model is adjusted, please warning with interpretation/generalization of results*
+    
+#### Figure 2c
 
 ```{r, warning=FALSE}
 
@@ -250,7 +253,7 @@ Model2_plot
 
 ```
 
-### Model 3: Time-interval 3 - ENSO.83_97
+### Model 3: Time-interval 2 - ENSO.83_97
 
 ```{r}
 # Time-interval 3 - ENSO.83_97
@@ -281,7 +284,7 @@ pred_3 <- predict(model3, newdata=NewData_3, level=0, asList = FALSE)
 
 ```
 
-* Figure 1d
+#### Figure 2d
 
 ```{r, warning=FALSE}
 
@@ -308,7 +311,7 @@ pred_3 <- predict(model3, newdata=NewData_3, level=0, asList = FALSE)
 
 ```
 
-### Model 4: Time-interval 4 - ENSO.98_14
+### Model 4: Time-interval 3 - ENSO.98_14
 
 ```{r}
 # Time-interval 4 - ENSO.98_14
@@ -346,7 +349,7 @@ pred_4 <- predict(model4, newdata=NewData_4, level=0)
 #length(pred)
 ```
 
-* Figure 1e
+#### Figure 2e
 
 ```{r, warning=FALSE}
 # Using model data 
@@ -365,7 +368,7 @@ pred_4 <- predict(model4, newdata=NewData_4, level=0)
     
     ```
 
-### Model 5: Time-interval 5 - ENSO.83_14
+### Model 5: Time-interval 4 - ENSO.83_14
 
 ```{r}
 # Time-interval 5 - ENSO.83_14  
@@ -392,7 +395,7 @@ NewData_5 <- expand.grid(Thermal_regime=unique(ENSO.83_14$Thermal_regime),
                         #Region=unique(aggr.region$Region),
                         Year=seq((min(ENSO.83_14$Year)), (max(ENSO.83_14$Year))))
 
-pred_5 <- predict(model5, newdata=NewData_5, level=0)
+pred_5 <- predict(model5, newdata=NewData_5, level=0) # level zero=population predictions
 
 ```
 
@@ -425,17 +428,23 @@ pred_5 <- predict(model5, newdata=NewData_5, level=0)
 * Set up ANOVA model
 * Set up multiple comparisons object for all-pair comparisons
 * Multiple comparisons after GLM including interaction terms
+*Note:* Year is treated as a factor and not as a continous variable
 
 ```{r, message=FALSE}
-library(multcomp)  
+library(multcomp)
+library(lme4)
 ```
 
 * Year 1982 vs 1983 (codes 12 vs 13)
 
 ```{r}
-ENSO.73_97$Year <- as.factor(ENSO.73_97$Year)
-comp_years_ENSO.73_97 <- aov(Coral_cover ~ Year + Thermal_regime, data = ENSO.73_97)
-m.comp_ENSO.73_97 <- glht(comp_years_ENSO.73_97, linfct = mcp(Year = "Tukey"))
+ENSO.73_97$Year_F <- as.factor(ENSO.73_97$Year)
+comp_years_ENSO.73_97 <- aov(Coral_cover ~ Year_F + Thermal_regime, data = ENSO.73_97)
+m.comp_ENSO.73_97 <- glht(comp_years_ENSO.73_97, linfct = mcp(Year_F = "Tukey"))
+summary(m.comp_ENSO.73_97, test = univariate())
+
+comp_years_ENSO.73_97 <- lmer(Coral_cover ~ Year_F + Thermal_regime + (1|Region), data = ENSO.73_97)
+m.comp_ENSO.73_97 <- glht(comp_years_ENSO.73_97, linfct = mcp(Year_F = "Tukey"))
 summary(m.comp_ENSO.73_97, test = univariate())
 
 ```
@@ -443,25 +452,32 @@ summary(m.comp_ENSO.73_97, test = univariate())
 * Year 1983 vs 1997 (codes 13 vs 27), and 1997 vs 1998  (codes 27 vs 28)
 
 ```{r}
-ENSO.83_97$Year <- as.factor(ENSO.83_97$Year)
-comp_years_ENSO.83_97 <- aov(Coral_cover ~ Year + Thermal_regime, data = ENSO.83_97)
-m.comp_ENSO.83_97 <- glht(comp_years_ENSO.83_97, linfct = mcp(Year = "Tukey"))
+ENSO.83_97$Year_F <- as.factor(ENSO.83_97$Year)
+comp_years_ENSO.83_97 <- aov(Coral_cover ~ Year_F + Thermal_regime, data = ENSO.83_97)
+m.comp_ENSO.83_97 <- glht(comp_years_ENSO.83_97, linfct = mcp(Year_F = "Tukey"))
+summary(m.comp_ENSO.83_97, test = univariate())
+
+comp_years_ENSO.83_97 <- lmer(Coral_cover ~ Year_F + Thermal_regime + (1|Region), data = ENSO.83_97)
+m.comp_ENSO.83_97 <- glht(comp_years_ENSO.83_97, linfct = mcp(Year_F = "Tukey"))
 summary(m.comp_ENSO.83_97, test = univariate())
 
 ```
 
-### FIGURE 1
+### FIGURE 2
 
 ```{r, warning=FALSE}
 
-Figure1<-grid.arrange(ENSO, Model1_plot, arrangeGrob(
+Figure2<-grid.arrange(ENSO, Model1_plot, arrangeGrob(
   Model2_plot, Model3b_plot, Model4b_plot, widths = c(3.9/12, 3.80/12, 4.30/12), ncol = 3),
              nrow=3) 
 #ggsave(file="Fig1_V7.svg", plot=Figure1, width=6.69, height=6.69)
 
 ```
 
-# DHW and coral cover change
+**FIGURE 2**  Illustration of the influence of most intense ENSO events on the coral cover in the ETP. **(a)** The upper panel indicates the positive (red) and negative (blue) SST anomalies in the Niño-3 region during 1971–2014 (NOAA Climate Prediction Center’s Extended Reconstructed Sea Surface Temperature ERSSTv5). The vertical orange bars indicate the strongest El Niño events. **(b)** The panel displays, at the horizontal axis, the 44-year live-coral cover aggregated at the region scale (n = 202) for ETP coral reefs with its fitted linear trend (gray dashed band). The fitted smooth line trend represents the long-term cycles of loss and recovery (blue line with the best polynomial fit with a 95% confidence level interval and a span = 0.2). The vertical axis shows the live coral cover. Box plots describe the minimum, maximum, interquartile ranges and median values of live-coral cover for each year. Notice the abrupt decrease in coral cover after 1982–83 El Niño; a smaller decline occurred after 1997–98. Random intercepts and random slopes models for the time-intervals: **(c)** 1974–1982, **(d)**1983–1997, and (e)1998–2014.
+
+
+# 2. DHW and coral cover change
 
 ```{r, message=FALSE}
 # Load packages 
@@ -471,7 +487,7 @@ library(data.table)
 library(RColorBrewer)
 ```
 
-## Yearly maximum DHW experienced by the best-represented coral reefs sites from 1982 to 2014
+## 2.1 Yearly maximum DHW experienced by the best-represented coral reefs sites from 1982 to 2014
 
 * Select and transform DHW data
 
@@ -491,7 +507,7 @@ library(RColorBrewer)
 
 ```
 
-### FIGURE 2a
+### FIGURE 3a
 
 * Plot max DHW in each location
 
@@ -555,11 +571,11 @@ library(RColorBrewer)
          bty="n")
 ```
 
-```{r}
+```{r, include = FALSE, message = FALSE, warning = FALSE}
  dev.off() # reset parameters for next plot 
 ```
 
-## Relationship of coral cover rate of change and thermal stress 
+## 2.2 Relationship of coral cover rate of change and thermal stress 
 
 * The DHW index measures the accumulated thermal stress above a bleaching threshold for 12 consecutive weeks. 
 * At each site, the maximum monthly mean sea surface # temperature (MMM) is calculated from a long-term satellite climatology dataset. 
@@ -568,10 +584,8 @@ library(RColorBrewer)
 * For example, if the water temperature during four consecutive weeks exceeds the MMM in 1.3°C, # 1.1°C, 1.2°C, and 1.4°C, then,
 * the site accumulates 5°C-weeks when these anomalies are summed. 
 
- We tested the hypothesis that the strength of the Log_annual_rate_of_change (response variable) 
- is a function of the maxDHW experienced. We had measured the rate of change from four Thermal regimes, 
- and fitted Thermal regimes as a random intercept, and estimate a common slope (change in the rate of change) 
- for maxDHW across all Thermal regimes by fitting it as a fixed effect.
+We tested the hypothesis that the strength of the *Log_annual_rate_of_change* (response variable) is a function of the *maxDHW* experienced. We had measured the rate of change from four Thermal regimes, and fitted Thermal regimes as a random intercept, and estimate a common slope (change in the rate of change) 
+ for *maxDHW* across all Thermal regimes by fitting it as a fixed effect.
 
 ```{r, message=FALSE}
 ## Load data
@@ -583,7 +597,7 @@ library(RColorBrewer)
   library(MuMIn)
 ```
 
-* Model 6: coral cover change and DHW 
+### Model 6: coral cover change and DHW 
 
 ```{r}
 model6 <- lmerTest::lmer(Log_annual_rate_of_change ~ maxDHW + (1|Thermal_regime), data=roc.cover)
@@ -597,7 +611,7 @@ r.squaredGLMM(model6)   #  returns the marginal and the conditional R2
 ```
 
 
-### FIGURE 2B: Relationship of coral cover rate of change and thermal stress
+### FIGURE 3b: Relationship of coral cover rate of change and thermal stress
 
 ```{r, message=FALSE}
 # Load packages
@@ -607,10 +621,10 @@ r.squaredGLMM(model6)   #  returns the marginal and the conditional R2
   library(RColorBrewer)
  
 # Create groups for plot
-  Seasonal          = subset(roc.cover, roc.cover$Thermal_regime == "Seasonal")          
-  Thermally_Stable  = subset(roc.cover, roc.cover$Thermal_regime == "Thermally_Stable")  
+  Seasonal           = subset(roc.cover, roc.cover$Thermal_regime == "Seasonal")          
+  Thermally_Stable   = subset(roc.cover, roc.cover$Thermal_regime == "Thermally_Stable")  
   Tropical_Upwelling = subset(roc.cover, roc.cover$Thermal_regime == "Upwelling") 
-  Galapagos         = subset(roc.cover, roc.cover$Thermal_regime == "Galapagos_Islands") 
+  Galapagos          = subset(roc.cover, roc.cover$Thermal_regime == "Galapagos_Islands") 
 
 # Plot
   par(oma = c(1,1,1,1)) 
@@ -659,20 +673,21 @@ r.squaredGLMM(model6)   #  returns the marginal and the conditional R2
          bty="n")
 ```
 
-
-```{r}
+```{r, include = FALSE}
  dev.off() # reset parameters for next plot 
 ```
 
-## Descriptives statistics heat stress
+**FIGURE 3** Heat stress and its effect on coral cover across the ETP. **(a)** The sequence of yearly maximum DHW experienced by the best-represented individual coral reefs sites from 1982 to 2014. When cumulative thermal stress reach 4°C-weeks and 8°C-weeks or higher (horizontal dotted lines), bleaching is likely, as well as coral mortality from thermal stress (Liu et al., 2006), respectively. Although the thresholds were developed in seasonal systems, and are not universally applicable for equatorial regions, they still useful for separating responses into groups. **(b)** The association between the maximum DHW and the coral cover change at each of four thermal regimes (dot colors as Fig. 2). Each point (n = 133) represents the DHW and the coral cover annual rate of change per individual coral reef site. The horizontal dotted line divides the positive (> 0) and the negative (< 0) rate of change caused by coral growth or mortality, respectively. The vertical dotted line indicates the DHW thresholds of 4°C-weeks and 8°C-weeks, respectively. The vertical and horizontal dotted lines create four response quadrants: I) heat stress and positive coral cover change (resilient response), II) no heat stress and positive coral cover change, III) no heat stress and negative coral cover change, and IV) heat stress and negative coral cover change.
+
+## Descriptive statistics heat stress
 
 No stress 
 
 ```{r}
-no.stress <- subset(roc.cover, maxDHW < 4)                      #subset of DHW < 4
-length(no.stress$maxDHW)/length(roc.cover$maxDHW)               # ratio no stress: total              
-1- length(no.stress$maxDHW)/length(roc.cover$maxDHW)               # ratio stress: total              
-positive.rate <- subset(no.stress, Log_annual_rate_of_change > 0)   #subset of Rate > 0
+no.stress <- subset(roc.cover, maxDHW < 4)                        # subset of DHW < 4
+length(no.stress$maxDHW)/length(roc.cover$maxDHW)                 # ratio no stress: total              
+1- length(no.stress$maxDHW)/length(roc.cover$maxDHW)              # ratio stress: total              
+positive.rate <- subset(no.stress, Log_annual_rate_of_change > 0) # subset of Rate > 0
 length(positive.rate$Log_annual_rate_of_change)                     # Number of observations in 
 negative.rate <- subset(no.stress, Log_annual_rate_of_change < 0)   #subset of Rate > 0
 length(negative.rate$Log_annual_rate_of_change)                     # Number of observations in 
@@ -718,7 +733,7 @@ length(positive.rate$Log_annual_rate_of_change)/length(negative.rate$Log_annual_
 
 ```
 
-# Supplementary figures
+# 3. Supplementary figures
 
 ```{r, message=FALSE}
 library(pals)
@@ -727,7 +742,8 @@ library(reshape2)
 library(RColorBrewer) 
 ```
 
-### FIGURE S2: a) Number of regions surveyed per year, b): Number of countries surveyed per year
+### FIGURE S1: Number of regionsand countries surveyed per year
+
 ```{r}
 # Barplot number of surveys per year
   obs_num = as.data.frame(table(cover$Year,cover$Region))    
@@ -800,32 +816,36 @@ legend( #"bottomright",
 
 ```
 
-
-```{r}
+```{r, include = FALSE}
  dev.off() # reset parameters for next plot 
 ```
 
-### FIGURE S3: Variation in the live coral cover for 1970–2014 per thermal regime 
+**FIGURE S1** Regions and countries surveyed per year. **(a)** Number of regions surveyed per year in the ETP. Since 1970, the number of surveys in all regions increased by year up to a maximum of 10 regions surveyed in 2009. **(b)** Number of countries surveyed per year (Colombia, Costa Rica, Ecuador, El Salvador, France, Mexico, Nicaragua and Panama). Since 1970, the number of surveys in all the countries reached a maximum of 6 countries in 2009.
 
-Temporal variation in the live coral cover for 1970–2014. 
+
+### FIGURE S2: Variation in the live coral cover for 1970–2014 per thermal regime 
+
+Temporal variation in the live coral cover for 1970–2014.
+
 * (a) Tropical upwelling regime. 
 * (b) Seasonal regime. 
 * (c) Thermally stable regime. 
 * (d) Equatorial upwelling regime. 
+
 The smooth line represents the best fit to the time series with a 95% confidence level interval and a span = 0.3.
 
 ```{r, message=FALSE, warning=FALSE}
 library(ggplot2)
 library(lemon)
 
-aggr.region$Thermal_regime<-factor(aggr.region$Thermal_regime, 
+aggr.region_S2<-aggr.region
+aggr.region_S2$Thermal_regime<-factor(aggr.region_S2$Thermal_regime, 
                                   levels=c("Tropical upwelling", "Seasonal", 
                                            "Thermally stable", "Equatorial upwelling"),
                                   labels = c ("a", "b", "c", "d"))
                                    
-summary(aggr.region$Thermal_regime)
 
-FigureS3<-ggplot(aggr.region, aes(x=Year, y=Coral_cover)) + 
+FigureS2<-ggplot(aggr.region_S2, aes(x=Year, y=Coral_cover)) + 
   theme_bw() + theme(panel.border = element_blank(),   # set ggplot to white background
                               panel.grid.major = element_blank(),
                               panel.grid.minor = element_blank(), 
@@ -838,6 +858,389 @@ FigureS3<-ggplot(aggr.region, aes(x=Year, y=Coral_cover)) +
                      expand = c(0.01, 0.01), "Year") +
   scale_y_continuous(limits=c(-19, 91), expand = c(0, 0), "Live coral cover (%)") +
   facet_wrap(Thermal_regime~., ncol=1, scales = "free_x", strip.position ="top")
+
+FigureS2
+#ggsave(file="FigureS2.svg", plot=FigureS2, width=6.69, height=6.69)
+
+```
+
+**FIGURE S2** Temporal variation in the live coral cover for 1970–2014. **(a)** Tropical upwelling regime (n = 75). **(b)** Seasonal regime (n = 28). **(c)** Thermally stable regime (n = 74). **(d)** Equatorial upwelling regime (n = 25). The smooth line represents the best fit to the time series with a 95% confidence level interval and a span = 0.3.
+
+```{r}
+FigureS2b<-ggplot(cover, aes(x=Year, y=Coral_cover)) + 
+  theme_bw() + theme(panel.border = element_blank(),   # set ggplot to white background
+                              panel.grid.major = element_blank(),
+                              panel.grid.minor = element_blank(), 
+                              axis.line = element_line(),
+                              strip.background = element_blank(),
+                              strip.text = element_text(face="bold",hjust = 0, vjust = -1))+
+  geom_point(aes(colour=Region)) +
+  geom_smooth (span = 0.3, colour="gray") +
+  scale_x_continuous(limits=c(1970, 2014), 
+                     breaks = seq(1970, 2014, by=5),
+                     expand = c(0.01, 0.01), "Year") +
+  scale_y_continuous(limits=c(-19, 91), expand = c(0, 0), "Live coral cover (%)") +
+  facet_wrap(Thermal_regime~., ncol=1, scales = "free_x", strip.position ="top") +
+  theme(legend.position = "bottom", legend.direction = "horizontal" )
+
+FigureS2b
+```
+
+# 4. Revision figures
+
+## Data only for four best monitoring sites
+
+We found in published studies four comprehensive monitoring datasets for Uva Island, Gorgona Island, Costa Rica, and the Eastern and Northern Galapagos Islands, which correspond to well recognized long-term monitoring programs
+
+```{r}
+# Create groups
+Uva_Island <- subset(aggr.site, Site == "Uva_Island")
+Gorgona <-subset(aggr.site, Site == "La_Azufrada")
+Cano_island <-subset(aggr.site, Site == "Cano_island")
+EGI <-subset(aggr.site, Region == "Eastern_Galapagos_Islands")
+NGI <-subset(aggr.site, Region == "Northern_Galapagos_Islands")
+
+Monitoring_sites <- rbind(Uva_Island,Gorgona,Cano_island,EGI,NGI)
+
+```
+
+### Model 7: Only monitored sites
+
+```{r}
+model7 <- lme(Coral_cover ~ -1 + Thermal_regime * Year, random = ~1|Region, data=Monitoring_sites) 
+summary(model7)
+anova(model7)
+
+
+plot(ranef(model7))    
+plot(model7)           
+resnorm7 <- resid(model7)
+hist(resnorm7, xlab = "Residuals", main = "") 
+coef.m7 <- as.data.frame(coef(summary(model7))) 
+plot(model7, resid(., type = "p") ~ fitted(.) | Region, abline = 0)
+plot(model7, Coral_cover ~ fitted(.) | Region, abline = c(0,1))
+plot(model7, Coral_cover ~ fitted(.) | Thermal_regime, abline = c(0,1))
+
+```
+
+### FIGURE S3: Data only for four best monitoring sites
+
+```{r}
+FigureS3 <-ggplot(Monitoring_sites, aes(x=Year, y=Coral_cover)) +
+  geom_boxplot(aes(group=Year), outlier.shape = NA) +
+  stat_boxplot(aes(group=Year), geom = 'errorbar')+
+  geom_smooth(method = lm, se=FALSE, linetype = "dashed", colour="red")+
+  geom_smooth(span = 0.2, se=T, colour="darkgray")+ 
+  scale_y_continuous("Live coral cover (%)", limits = c(-15, 95), 
+                     breaks = seq(0, 90, by=20), expand = c(0,0))+
+  scale_x_continuous("", limits = c(1969, 2015),
+                     breaks = seq(1970, 2014, by=2), expand = c(0,0))+
+  annotate("rect", xmin = 1982, xmax = 1983, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1997, xmax = 1998, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1972, xmax = 1973, ymin = 0, ymax = 80,  alpha = .2, fill="red")
+
 FigureS3
-#ggsave(file="FigureS3.svg", plot=FigureS3, width=6.69, height=6.69)
+
+FigureS3b<- FigureS3 + geom_point(aes(colour=Location), alpha=0.4) +
+  theme(legend.position = "bottom")
+FigureS3b
+
+#ggsave(file="FigS3.png", plot=FigureS3, width=6.69, height=4)
+#ggsave(file="FigS3b.png", plot=FigureS3b, width=6.69, height=4.69)
+
+```
+
+## Data excluding one thermal regime from model 1
+
+Model 1: All years (1970_2014) removing each termal regime 
+
+* Tropical upwelling
+
+```{r}
+Model1_NoEquatorial_Upwelling <- ggplot(data=subset(aggr.region, Thermal_regime!="Tropical upwelling"), aes(x=Year, y=Coral_cover)) +
+  geom_boxplot(aes(group=Year), outlier.shape = NA) +
+  stat_boxplot(aes(group=Year), geom = 'errorbar')+
+  geom_smooth(method = lm, se=FALSE, linetype = "dashed", colour="red")+
+  geom_smooth(span = 0.2, se=T, colour="darkgray")+ 
+  #geom_point(aes(colour=Thermal_regime), alpha=0.5) +
+  scale_y_continuous("Live coral cover (%)", limits = c(-5, 90), 
+                     breaks = seq(0, 90, by=20), expand = c(0,0))+
+  scale_x_continuous("", limits = c(1969, 2015),
+                     breaks = seq(1970, 2014, by=2), expand = c(0,0))+
+  scale_color_manual(values=my_colours) + labs(title="a")+
+  #annotate("text", x = 1983, y = 70, label = "*", size=8)+
+  annotate("rect", xmin = 1982, xmax = 1983, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1997, xmax = 1998, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1972, xmax = 1973, ymin = 0, ymax = 80,  alpha = .2, fill="red")
+#Model1_NoEquatorial_Upwelling
+```
+
+* Seasonal
+
+```{r}
+Model1_NoSeasonal <- ggplot(data=subset(aggr.region, Thermal_regime!="Seasonal"), aes(x=Year, y=Coral_cover)) +
+  geom_boxplot(aes(group=Year), outlier.shape = NA) +
+  stat_boxplot(aes(group=Year), geom = 'errorbar')+
+  geom_smooth(method = lm, se=FALSE, linetype = "dashed", colour="red")+
+  geom_smooth(span = 0.2, se=T, colour="darkgray")+ 
+  #geom_point(aes(colour=Thermal_regime), alpha=0.5) +
+  scale_y_continuous("Live coral cover (%)", limits = c(-5, 90),
+                     breaks = seq(0, 90, by=20), expand = c(0,0))+
+  scale_x_continuous("", limits = c(1969, 2015),
+                     breaks = seq(1970, 2014, by=2), expand = c(0,0))+
+  scale_color_manual(values=my_colours) + labs(title="b")+
+  #annotate("text", x = 1983, y = 70, label = "*", size=8)+
+  annotate("rect", xmin = 1982, xmax = 1983, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1997, xmax = 1998, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1972, xmax = 1973, ymin = 0, ymax = 80,  alpha = .2, fill="red")
+#Model1_NoSeasonal
+```
+
+* Thermally stable
+
+```{r}
+Model1_NoThermallyStable <- ggplot(data=subset(aggr.region, Thermal_regime!="Thermally stable"), aes(x=Year, y=Coral_cover)) +
+  geom_boxplot(aes(group=Year), outlier.shape = NA) +
+  stat_boxplot(aes(group=Year), geom = 'errorbar')+
+  geom_smooth(method = lm, se=FALSE, linetype = "dashed", colour="red")+
+  geom_smooth(span = 0.2, se=T, colour="darkgray")+ 
+  #geom_point(aes(colour=Thermal_regime), alpha=0.5) +
+  scale_y_continuous("Live coral cover (%)", limits = c(-5, 90),
+                     breaks = seq(0, 90, by=20), expand = c(0,0))+
+  scale_x_continuous("", limits = c(1969, 2015),
+                     breaks = seq(1970, 2014, by=2), expand = c(0,0))+
+  scale_color_manual(values=my_colours) + labs(title="c")+
+  #annotate("text", x = 1983, y = 70, label = "*", size=8)+
+  annotate("rect", xmin = 1982, xmax = 1983, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1997, xmax = 1998, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1972, xmax = 1973, ymin = 0, ymax = 80,  alpha = .2, fill="red")
+# Model1_NoThermallyStable
+```
+
+* Equatorial upwelling
+
+```{r}
+Model1_No_EqUpwelling <- ggplot(data=subset(aggr.region, Thermal_regime!="Equatorial upwelling"), aes(x=Year, y=Coral_cover)) +
+  geom_boxplot(aes(group=Year), outlier.shape = NA) +
+  stat_boxplot(aes(group=Year), geom = 'errorbar')+
+  geom_smooth(method = lm, se=FALSE, linetype = "dashed", colour="red")+
+  geom_smooth(span = 0.2, se=T, colour="darkgray")+ 
+  #geom_point(aes(colour=Thermal_regime), alpha=0.5) +
+  scale_y_continuous("Live coral cover (%)", limits = c(-5, 90), 
+                     breaks = seq(0, 90, by=20), expand = c(0,0))+
+  scale_x_continuous("", limits = c(1969, 2015),
+                     breaks = seq(1970, 2014, by=2), expand = c(0,0))+
+  scale_color_manual(values=my_colours) + labs(title="d")+
+  #annotate("text", x = 1983, y = 70, label = "*", size=8)+
+  annotate("rect", xmin = 1982, xmax = 1983, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1997, xmax = 1998, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1972, xmax = 1973, ymin = 0, ymax = 80,  alpha = .2, fill="red")
+# Model1_No_EqUpwelling
+```
+
+### FIGURE S4: Effect of thermal regime removal/addition 
+
+```{r}
+FigureS4<-grid.arrange(Model1_NoEquatorial_Upwelling, Model1_NoSeasonal, 
+                       Model1_NoThermallyStable, Model1_No_EqUpwelling,
+                       ncol = 2)
+#ggsave(file="FigS5.png", plot=FigureS5, width=6.69, height=6.69)
+#ggsave(file="FigS5.pdf", plot=FigureS5, width=6.69, height=6.69)
+
+```
+
+**Figure S4:** Coral cover trends excluding **(a)** Thermally stable, **(b)** Tropical Upwelling, **(c)** Equatorial upwelling, and **(d)** Seasonal thermal regimes
+
+## Add CI based on boostraping to fig 2?
+
+To use "bootMer" models need to be run with lme4 instead nlme. Please check accuracy of the new (b) models
+
+### Model 1b: All years 1970_2014 with lme4
+
+```{r}
+  # 1. Build lme4 model:
+   
+    model1b <- lmer(
+      Coral_cover ~ Thermal_regime * Year + 
+        (1|Region), data=aggr.region, REML = FALSE)
+  
+    summary(model1b)
+    anova(model1b) # Thermal regime is not significant anymore?? 
+    ranova(model1b) # Region seems the only significant effect
+    drop1(model1b)
+```
+
+**Not sure if this if right since the model itself is not significant **
+
+```{r}
+  # 2. Predict values:
+    pred1 <- predict(model1b,re.form = NA)
+
+  #3. Bootstrap CI:
+    boot1 <- bootMer(model1b, predict, nsim = 1000, re.form = NULL) # include random effects, reduce CI lot!
+    std.err <- apply(boot1$t, 2, sd)
+    CI.lo_1 <- pred1 - std.err*1.96
+    CI.hi_1 <- pred1 + std.err*1.96
+
+  #Plot
+  Model1b_plot<- ggplot(
+    aggr.region, aes(x = Year, y = Coral_cover, colour = Thermal_regime)) +
+    geom_line(aes(y = pred1),size=2) +
+    geom_point(aes(fill=factor(Thermal_regime)),
+             shape = 21, colour = "black", size = 2, stroke = 0.3, alpha=0.5) +
+    geom_ribbon(aes(ymin = CI.lo_1, ymax = CI.hi_1),
+                size=2, alpha = 0.03, linetype = 0) +
+    scale_color_manual(values=my_colours) +
+    scale_fill_manual(values=my_colours) +
+    scale_y_continuous("Live coral cover (%)", 
+                       limits = c(-20, 90), 
+                       breaks = seq(0, 90, by=20), expand = c(0,0))+
+    scale_x_continuous("", limits = c(1969, 2015),
+                     breaks = seq(1970, 2014, by=2), expand = c(0,0))
+  
+  Model1b_plot
+   
+```
+
+### Model 2b: Time-interval 1 - ENSO.73_82 with lme4
+
+Not enough data
+
+### Model 3b: Time-interval 2 - ENSO.83_97 with lme4
+
+```{r}
+  # 1. Build lme4 model:
+   
+    model3b <- lmer(
+      Coral_cover ~ Thermal_regime * Year + 
+        (1|Region), data=ENSO.83_97, REML = FALSE)
+  
+    summary(model3b)
+    anova(model3b) # Thermal regime and its interaciton with year are significant 
+    ranova(model3b) # ramdom effects are not 
+    drop1(model3b)
+  
+  # 2. Predict values:
+    pred3 <- predict(model3b,re.form = NA)
+
+  #3. Bootstrap CI:
+    boot3 <- bootMer(model3b, predict, nsim = 1000, re.form = NA) # No ramndom effects
+    std.err <- apply(boot3$t, 2, sd)
+    CI.lo_3 <- pred3 - std.err*1.96
+    CI.hi_3 <- pred3 + std.err*1.96
+
+  #Plot
+    
+   Model3b_plot<- ggplot(
+     ENSO.83_97, aes(x = Year, y = Coral_cover, colour = Thermal_regime))+
+    geom_line(aes(y = pred3),size=2) +
+    geom_point(aes(fill=factor(Thermal_regime)),
+          shape = 21, colour = "black", size = 2, stroke = 0.3, alpha=0.5) + 
+    geom_ribbon(aes(ymin = CI.lo_3, ymax = CI.hi_3),
+                size=2, alpha = 0.03, linetype = 0) +
+    scale_fill_manual(values=my_colours)+
+    scale_colour_manual(values=my_colours) +
+    scale_x_continuous("", limits = c(1982.7, 1998.2), 
+                        breaks = seq(1983, 1997, by=2), 
+                        expand = c(0.02,0.02))+
+    scale_y_continuous("Live coral cover (%)", 
+                       limits = c(-20, 90), 
+                       breaks = seq(0, 90, by=20), expand = c(0,0))
+    
+   Model3b_plot
+   
+
+  #ggsave(file="Model3b_plot.png", plot=Model3b_plot, width=4, height=4)
+  #ggsave(file="Model3b_plot.pdf", plot=Model3b_plot, width=4, height=4)
+   
+```
+
+### Model 4b:  Time-interval 3 - ENSO.98_14 with lme4
+
+```{r}
+  # 1. Build lme4 model:
+   
+    model4b <- lmer(
+      Coral_cover ~ Thermal_regime * Year + 
+        (1|Region), data=ENSO.98_14, REML = FALSE)
+  
+    summary(model4b)
+    anova(model4b) # Thermal regime and its interaciton with year are significant 
+    ranova(model4b) # ramdom effects are significant
+    drop1(model4b)
+  
+  # 2. Predict values:
+    pred4 <- predict(model4b,re.form = NA)
+
+  #3. Bootstrap CI:
+    boot4 <- bootMer(model4b, predict, nsim = 1000, re.form = NULL) # Include ramndom effects
+    std.err <- apply(boot4$t, 2, sd)
+    CI.lo_4 <- pred4 - std.err*1.96
+    CI.hi_4 <- pred4 + std.err*1.96
+
+  #Plot
+   Model4b_plot<- ggplot(ENSO.98_14, aes(
+     x = Year, y = Coral_cover, colour = Thermal_regime)) +
+    geom_line(aes(y = pred4),size=2) +
+    geom_point(aes(fill=factor(Thermal_regime)),
+             shape = 21, colour = "black", size = 2, 
+             stroke = 0.3, alpha=0.5) +
+    geom_ribbon(aes(ymin = CI.lo_4, ymax = CI.hi_4),size=2, 
+                alpha = 0.03, linetype = 0) +
+    scale_y_continuous("Live coral cover (%)",
+                       limits = c(-20, 90), 
+                       breaks = seq(0, 90, by=20), expand = c(0,0))+
+    scale_x_continuous("", limits = c(1997.7, 2014.3),
+                     breaks = seq(1998, 2014, by=2), expand = c(0.02,0.02))+
+   scale_color_manual(values=my_colours) +
+   scale_fill_manual(values=my_colours)
+   Model4b_plot
+  #ggsave(file="Model4b_plot.png", plot=Model4b_plot, width=4, height=4)
+  #ggsave(file="Model4b_plot.pdf", plot=Model4b_plot, width=4, height=4)
+   
+```
+
+### Model 5b:  Time-interval 4 - ENSO.98_14 with lme4
+
+```{r}
+  # 1. Build lme4 model:
+   
+    model5b <- lmer(
+      Coral_cover ~ Thermal_regime * Year + 
+        (1|Region), data=ENSO.83_14, REML = FALSE)
+  
+    summary(model5b)
+    anova(model5b) # Thermal regime and its interaciton with year are significant 
+    ranova(model5b) # ramdom effects are significant
+    drop1(model5b)
+  
+  # 2. Predict values:
+    pred5 <- predict(model5b,re.form = NA)
+
+  #3. Bootstrap CI:
+    boot5 <- bootMer(model5b, predict, nsim = 1000, re.form = NULL) # Include ramndom effects
+    std.err <- apply(boot5$t, 2, sd)
+    CI.lo_5 <- pred5 - std.err*1.96
+    CI.hi_5 <- pred5 + std.err*1.96
+
+  #Plot
+   Model5b_plot<- ggplot(ENSO.83_14, aes(
+     x = Year, y = Coral_cover, colour = Thermal_regime)) +
+    geom_line(aes(y = pred5),size=2) +
+    geom_point(aes(fill=factor(Thermal_regime)),
+             shape = 21, colour = "black", size = 2, 
+             stroke = 0.3, alpha=0.5) +
+    geom_ribbon(aes(ymin = CI.lo_5, ymax = CI.hi_5),size=2, 
+                alpha = 0.03, linetype = 0) +
+    scale_y_continuous("Live coral cover (%)",
+                       limits = c(-20, 90), 
+                       breaks = seq(0, 90, by=20), expand = c(0,0))+
+    scale_x_continuous("", limits = c(1983, 2014.3),
+                     breaks = seq(1983, 2014, by=2), expand = c(0.02,0.02))+
+   scale_color_manual(values=my_colours) +
+   scale_fill_manual(values=my_colours)
+   Model5b_plot
+  #ggsave(file="Model4b_plot.png", plot=Model4b_plot, width=4, height=4)
+  #ggsave(file="Model4b_plot.pdf", plot=Model4b_plot, width=4, height=4)
+   
 ```
